Fix alignment problems

--- a/src/app/search/filter/filter.component.css
+++ b/src/app/search/filter/filter.component.css
@@ -1,22 +1,17 @@
-form {
+form, .inputWrapper {
   display: flex;
   flex-flow: row wrap;;
   justify-content: space-between;
 }
 
-.formGroup {
-  flex: 1 1 45%;
+form {
+  margin-right: -20px;
+}
+
+.formGroup, mat-form-field {
+  flex: 1 1 auto;
   margin-right: 10px;
 }
 
-.inputWrapper {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-}
 
-.mat-form-field {
-  flex: 1 1 45%;
-  margin-right: 10px;
-}
 
